Change date to next day, fix button linebreak
- the orange button on the minibanner (VAR) has a linebreak on some
breakpoints, this is getting fixed via css now

--- a/banners/mobile/styles/MiniBanner_var.pcss
+++ b/banners/mobile/styles/MiniBanner_var.pcss
@@ -118,6 +118,7 @@
 			font-weight: bold;
 			color: $color-white;
 			background: $color-secondary;
+			white-space: nowrap;
 
 			&:hover,
 			&:focus {
